--- a/templates/gitlab/0/docker-compose.yml
+++ b/templates/gitlab/0/docker-compose.yml
@@ -4,6 +4,7 @@ gitlab-server:
   - ${public_port}:80/tcp
   labels:
     io.rancher.sidekicks: gitlab-data
+    io.rancher.scheduler.affinity:host_label: type=real
   hostname: ${gitlab_hostname}
   image: gitlab/gitlab-ce:8.5.1-ce.0
   volumes_from:
@@ -12,6 +13,7 @@ gitlab-server:
 gitlab-data:
   labels:
     io.rancher.container.start_once: 'true'
+    io.rancher.scheduler.affinity:host_label: type=real
   entrypoint:
   - /bin/true
   hostname: gitdata
