--- a/templates/wordpress/0/docker-compose.yml
+++ b/templates/wordpress/0/docker-compose.yml
@@ -5,11 +5,11 @@ wordpress:
   ports:
     - ${public_port}:80
   labels:
-    - io.rancher.scheduler.affinity:host_label: type=real
+    io.rancher.scheduler.affinity:host_label: type=real
 
 db:
   image: mariadb
   environment:
     MYSQL_ROOT_PASSWORD: example
   labels:
-    - io.rancher.scheduler.affinity:host_label: type=real
+    io.rancher.scheduler.affinity:host_label: type=real
