updata image name as well as description.

--- a/templates/kalimetasploit/0/rancher-compose.yml
+++ b/templates/kalimetasploit/0/rancher-compose.yml
@@ -1,5 +1,5 @@
 .catalog:
-  name: Kalimetasploit 
+  name: linuxkonsult/kali-metasploit 
   version: latest
   description: |
     Kali base image with metasploit.
