docker compose and rancher compose mapping.

--- a/templates/kalimetasploit/0/rancher-compose.yml
+++ b/templates/kalimetasploit/0/rancher-compose.yml
@@ -1,5 +1,5 @@
 .catalog:
-  name: linuxkonsult/kali-metasploit 
+  name: kali
   version: latest
   description: |
     Kali base image with metasploit.
