--- a/templates/kalimetasploit/0/rancher-compose.yml
+++ b/templates/kalimetasploit/0/rancher-compose.yml
@@ -12,4 +12,11 @@
       required: true
       default: "8122"
       type: "int"
+  questions:    
+    - variable: vnc_port
+      description: "vnc port to access the kali"
+      label: "vnc Port"
+      required: true
+      default: "5901"
+      type: "int"
 
