--- a/templates/wordpress/1/docker-compose.yml
+++ b/templates/wordpress/1/docker-compose.yml
@@ -4,10 +4,14 @@ wordpress:
     - db:mysql
   ports:
     - ${public_port}:80
+  labels:
+    io.rancher.scheduler.affinity:host_label: type=real
   net: bridge
 
 db:
   image: mariadb
   environment:
     MYSQL_ROOT_PASSWORD: example
+  labels:
+    io.rancher.scheduler.affinity:host_label: type=real
   net: bridge
