--- a/templates/wordpress/2/docker-compose.yml
+++ b/templates/wordpress/2/docker-compose.yml
@@ -1,17 +1,29 @@
-wordpress:
-  image: wordpress
-  links:
-    - db:mysql
-  ports:
-    - ${public_port}:80
+db:
+  image: mysql:5.7
+  volumes:
+    - "./.data/db:/var/lib/mysql"
+  restart: always
+  environment:
+    MYSQL_ROOT_PASSWORD: wordpress
+    MYSQL_DATABASE: wordpress
+    MYSQL_USER: wordpress
+    MYSQL_PASSWORD: wordpress
   labels:
     io.rancher.scheduler.affinity:host_label: type=real
   net: bridge
 
-db:
-  image: mariadb
+wordpress:
+  depends_on:
+    - db
+  image: wordpress:latest
+  links:
+    - db
+  ports:
+    - ${public_port}:80
+  restart: always
   environment:
-    MYSQL_ROOT_PASSWORD: example
+    WORDPRESS_DB_HOST: db:3306
+    WORDPRESS_DB_PASSWORD: wordpress
   labels:
     io.rancher.scheduler.affinity:host_label: type=real
   net: bridge
