--- a/templates/wordpress/2/docker-compose.yml
+++ b/templates/wordpress/2/docker-compose.yml
@@ -1,8 +1,26 @@
+wordpress:
+  image: wordpress
+  links:
+    - db:mysql
+  ports:
+    - ${public_port}:80
+  labels:
+    io.rancher.scheduler.affinity:host_label: type=real
+  net: bridge
+
+db:
+  image: mariadb
+  environment:
+    MYSQL_ROOT_PASSWORD: example
+  labels:
+    io.rancher.scheduler.affinity:host_label: type=real
+  net: bridge
+
+
 db:
   image: mysql:5.7
   volumes:
     - "./.data/db:/var/lib/mysql"
-  restart: always
   environment:
     MYSQL_ROOT_PASSWORD: wordpress
     MYSQL_DATABASE: wordpress
@@ -13,14 +31,11 @@ db:
   net: bridge
 
 wordpress:
-  depends_on:
-    - db
   image: wordpress:latest
   links:
     - db
   ports:
     - ${public_port}:80
-  restart: always
   environment:
     WORDPRESS_DB_HOST: db:3306
     WORDPRESS_DB_PASSWORD: wordpress
