update log driver file format to V1, and use fluentd.

--- a/templates/wordpress/3/docker-compose.yml
+++ b/templates/wordpress/3/docker-compose.yml
@@ -10,8 +10,7 @@ db:
   labels:
     io.rancher.scheduler.affinity:host_label: type=real
   net: bridge
-  logging:
-    driver: syslog
+  log_driver: fluentd
 
 wordpress:
   image: wordpress:latest
@@ -25,5 +24,4 @@ wordpress:
   labels:
     io.rancher.scheduler.affinity:host_label: type=real
   net: bridge
-  logging:
-    driver: syslog
+  log_driver: fluentd
