--- a/templates/wordpress/4/docker-compose.yml
+++ b/templates/wordpress/4/docker-compose.yml
@@ -9,7 +9,7 @@ wordpress:
   log_driver: 'fluentd'
   log_opt:
     fluentd-address: onehao.pw:24224
-    fluentd-tag: docker.{{.FullID}}s
+    fluentd-tag: docker.{{.FullID}}
 
 db:
   image: mariadb
