--- a/templates/rabbitmq-32/1/docker-compose.yml
+++ b/templates/rabbitmq-32/1/docker-compose.yml
@@ -32,4 +32,5 @@ rabbitmq-base:
     - /opt/rancher/bin/run.sh
   environment:
     - RABBITMQ_ERLANG_COOKIE=${erlang_cookie}
-
+  ports:
+    - ${rabbitmq-base_port}:15672
