--- a/templates/rabbitmq-32/1/rancher-compose.yml
+++ b/templates/rabbitmq-32/1/rancher-compose.yml
@@ -32,10 +32,16 @@
       type: "string"
       default: --interval 5 
     - variable: public_port
-      description: "public port to access the wordpress site"
+      description: "public port to access the mq"
       label: "Public Port"
       required: true
       default: "5672"
+      type: "int"
+    - variable: rabbitmq-base_port
+      description: "public port to access the rabbitmq-admin"
+      label: "Public Port"
+      required: true
+      default: "15672"
       type: "int"
 
 rabbitmq:
