--- a/templates/rabbitmq-32/1/docker-compose.yml
+++ b/templates/rabbitmq-32/1/docker-compose.yml
@@ -33,4 +33,4 @@ rabbitmq-base:
   environment:
     - RABBITMQ_ERLANG_COOKIE=${erlang_cookie}
   ports:
-    - ${rabbitmq-base_port}:15672
+    - ${rabbitmqbase_port}:15672
